--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jb-blog",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
@@ -24,11 +24,12 @@
     "file-loader": "^6.2.0",
     "immutability-helper": "^3.1.1",
     "lodash": "^4.17.21",
-    "node-sass": "^6.0.1",
     "prism-react-renderer": "^1.2.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-tooltip": "^4.2.21",
+    "sass": "^1.37.5",
     "url-loader": "^4.1.1"
   },
   "browserslist": {
