--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^1.1.1",
     "docusaurus-plugin-sass": "^0.2.1",
     "file-loader": "^6.2.0",
+    "hast-util-is-element": "^1.1.0",
     "immutability-helper": "^3.1.1",
     "lodash": "^4.17.21",
     "paper": "^0.12.15",
@@ -29,9 +30,13 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-responsive-carousel": "^3.2.21",
     "react-tooltip": "^4.2.21",
+    "rehype-katex": "^4.0.0",
+    "remark-math": "^3.0.1",
     "sass": "^1.37.5",
-    "url-loader": "^4.1.1"
+    "url-loader": "^4.1.1",
+    "vis-network": "^9.1.0"
   },
   "browserslist": {
     "production": [
