--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "^3.0.0",
-    "@docusaurus/preset-classic": "^3.0.0",
+    "@docusaurus/core": "^3.8.1",
+    "@docusaurus/preset-classic": "^3.8.1",
     "@mdx-js/react": "^3.0.0",
+    "@radix-ui/react-icons": "^1.3.2",
     "@svgr/webpack": "^8.1.0",
     "bootstrap": "^4.6.0",
     "clsx": "^1.1.1",
@@ -30,7 +31,9 @@
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-range-slider-input": "^3.2.1",
     "react-responsive-carousel": "^3.2.21",
+    "react-toastify": "^11.0.5",
     "react-tooltip": "^4.2.21",
     "rehype-katex": "^7.0.0",
     "remark-math": "^6.0.0",
