--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
     "build": "docusaurus build",
+    "build-dev": "docusaurus build --dev",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
@@ -26,7 +27,7 @@
     "hast-util-is-element": "^1.1.0",
     "immutability-helper": "^3.1.1",
     "lodash": "^4.17.21",
-    "paper": "^0.12.15",
+    "paper": "^0.12.18",
     "prism-react-renderer": "^2.1.0",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
